--- a/day1/index.html
+++ b/day1/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>Week 3 interactive examples</title>
+  <title>Day1 interactive examples</title>
   <link rel="stylesheet" href="">
   <!-- p5.js library -->
   <script type="text/javascript" src="libraries/p5.js"></script>
