--- a/day4/index.html
+++ b/day4/index.html
@@ -46,7 +46,7 @@
 </head>
 <body>
 <section class="ex">
-  <h2>arrays</h2>
+  <h2>Day 4.1</h2>
   <section class="example_container">
     <div class="code">
       <pre>
@@ -105,7 +105,7 @@ function drawFace(x, y, size) {
 
 
 <section class="ex">
-  <h2>Arrays</h2>
+  <h2>Day 4.2</h2>
 <section class="example_container">
   <div class="code">
 <pre>
