--- a/day4/index2.html
+++ b/day4/index2.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>Day 4 interactive examples</title>
+  <title>Week 4 array examples</title>
   <link rel="stylesheet" href="">
   <!-- p5.js library -->
   <script type="text/javascript" src="libraries/p5.js"></script>
@@ -46,7 +46,7 @@
 </head>
 <body>
 <section class="ex">
-  <h2>Day4.1</h2>
+  <h2>Day 4.1</h2>
   <section class="example_container">
     <div class="code">
       <pre>
@@ -102,8 +102,10 @@ function drawFace(x, y, size) {
   </section>
 </section>
 
+
+
 <section class="ex">
-<h2>Day4.2</h2>
+  <h2>Day 4.2</h2>
 <section class="example_container">
   <div class="code">
 <pre>
@@ -130,17 +132,14 @@ function setup(){
   //how large is our array?
   text(myCollection.length, 10,height-30);
 }
-
-    </code>
+</code>
     </pre>
     </div>
-    
   </section>
-  
 </section>
 
 <section class="ex">
-  <h2>Array with numbers</h2>
+  <h2>Arrays with numbers</h2>
 <section class="example_container">
   <div class="code">
 <pre>
@@ -161,7 +160,6 @@ function setup() {
   }
   text(tenths, 0,height/2);
 }
-
     </code>
     </pre>
     </div>
@@ -169,8 +167,10 @@ function setup() {
   
 </section>
 
+
+
 <section class="ex">
-  <h2>Parallel arrays</h2>
+  <h2>Arrays drawing</h2>
 <section class="example_container">
   <div class="code">
 <pre>
@@ -196,13 +196,11 @@ function draw() {
 </code>
     </pre>
     </div>
-
-
-  </section>
-  <section class="notes">
-    Note that the loop fills the arrays with random x and y positions.
+    
   </section>
 </section>
+
+
 <script> $(document).ready(function() { renderCode(); }); </script>
 </body>
 </html>
